--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               <h6>keep up to date with the latest updates</h6>
               <h1>Subscribe to our newsletter</h1>
               <form action="#">
-                <input class="ABC" type="email" name="email" id="" placeholder="Email adrees">
+                <input class="ABC" type="email" name="email" id="" placeholder="E-mail adrees">
               </form>
               <p><a href="#">Subscribe</a></p>
             </div>
@@ -282,7 +282,7 @@
 
       <div class="FeedBack">
         <div class="FeedBack-text text ">
-          <p>Lorem ipsum dolor sit amet.</p>
+          <h6>Lorem ipsum dolor sit amet.</h6>
           <h1>What do users say about our application</h1>
           <div class="contain">
             <div class="row">
