--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
               <div class="col-4">
                 <div class="Background1">
                   <div class="bachground">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum veniam debitis tenetur cum illo commodi perferendis! Minima, tempore. Voluptatum, accusantium? Quibusdam blanditiis corporis earum recusandae reprehenderit. Dolorem, et quasi porro alias facilis perferendis animi quod voluptates dolore eos ipsa! Officia illo at, odio laudantium soluta possimus? Maiores quod, omnis dicta, ratione aspernatur corrupti accusantium quo cumque, veniam voluptate facilis quis.</p>
+                    <p class="pane">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum veniam debitis tenetur cum illo commodi perferendis! Minima, tempore. Voluptatum, accusantium? Quibusdam blanditiis corporis earum recusandae reprehenderit. Dolorem, et quasi porro alias facilis perferendis animi quod voluptates dolore eos ipsa! Officia illo at, odio laudantium soluta possimus? Maiores quod, omnis dicta, ratione aspernatur corrupti accusantium quo cumque, veniam voluptate facilis quis.</p>
                   </div>
                   <div class="row">
                     <div class="col-6">
@@ -314,7 +314,7 @@
               <div class="col-4">
                 <div class="Background1">
                   <div class="bachground">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum veniam debitis tenetur cum illo commodi perferendis! Minima, tempore. Voluptatum, accusantium? Quibusdam blanditiis corporis earum recusandae reprehenderit. Dolorem, et quasi porro alias facilis perferendis animi quod voluptates dolore eos ipsa! Officia illo at, odio laudantium soluta possimus? Maiores quod, omnis dicta, ratione aspernatur corrupti accusantium quo cumque, veniam voluptate facilis quis.</p>
+                    <p class="pane">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum veniam debitis tenetur cum illo commodi perferendis! Minima, tempore. Voluptatum, accusantium? Quibusdam blanditiis corporis earum recusandae reprehenderit. Dolorem, et quasi porro alias facilis perferendis animi quod voluptates dolore eos ipsa! Officia illo at, odio laudantium soluta possimus? Maiores quod, omnis dicta, ratione aspernatur corrupti accusantium quo cumque, veniam voluptate facilis quis.</p>
                   </div>
                   <div class="row">
                     <div class="col-6">
@@ -337,7 +337,7 @@
               <div class="col-4">
                 <div class="Background1">
                   <div class="bachground">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum veniam debitis tenetur cum illo commodi perferendis! Minima, tempore. Voluptatum, accusantium? Quibusdam blanditiis corporis earum recusandae reprehenderit. Dolorem, et quasi porro alias facilis perferendis animi quod voluptates dolore eos ipsa! Officia illo at, odio laudantium soluta possimus? Maiores quod, omnis dicta, ratione aspernatur corrupti accusantium quo cumque, veniam voluptate facilis quis.</p>
+                    <p class="pane">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum veniam debitis tenetur cum illo commodi perferendis! Minima, tempore. Voluptatum, accusantium? Quibusdam blanditiis corporis earum recusandae reprehenderit. Dolorem, et quasi porro alias facilis perferendis animi quod voluptates dolore eos ipsa! Officia illo at, odio laudantium soluta possimus? Maiores quod, omnis dicta, ratione aspernatur corrupti accusantium quo cumque, veniam voluptate facilis quis.</p>
                   </div>
                   <div class="row">
                     <div class="col-6">
